[package]
name = "correlational_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
plotters = "0.3.4"
log = "0.4.17"
env_logger = "0.10.0"
